syntax = "proto3";

option csharp_namespace = "MonitorService.Protos";

package MonitorService;

message PingRequest {
  string ServiceName = 1;
}